--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
 # Core Python dependencies  
-python-dotenv==1.0.0    # For managing environment variables  
+#python-dotenv==1.0.0    # For managing environment variables  
 #requests==2.31.0        # For API calls (e.g., weather updates)  
 
 # Speech Recognition  
-SpeechRecognition==3.10.0  # For converting speech to text  
-pyaudio==0.2.13           # Required for live audio processing  
+SpeechRecognition==3.14.2	# For converting speech to text  
+pyaudio==0.2.14			# Required for live audio processing  
 
 # Natural Language Processing (NLP)  
-nltk==3.8.1              # NLP toolkit  
-spacy==3.6.1             # Alternative NLP framework  
-transformers==4.36.2     # If using LLMs for advanced responses  
+#nltk==3.8.1              # NLP toolkit  
+#spacy==3.6.1             # Alternative NLP framework  
+#transformers==4.36.2     # If using LLMs for advanced responses  
 
 # Text-to-Speech (TTS)  
-pyttsx3==2.90            # Offline TTS  
+pyttsx3==2.98            # Offline TTS  
 #gTTS==2.4.0              # Google Text-to-Speech (online)  
 
 # Automation (for launching applications & searching files)  
-pyautogui==0.9.54        # For controlling the OS  
-pygetwindow==0.0.9       # For managing windows  
-keyboard==0.13.5         # For handling keyboard input  
+#pyautogui==0.9.54        # For controlling the OS  
+#pygetwindow==0.0.9       # For managing windows  
+#keyboard==0.13.5         # For handling keyboard input  
 
 # GUI (Optional, if building a graphical interface)  
 #tkinter                   # Built-in for basic GUI  
 #PyQt6==6.5.1             # Alternative for advanced UI  
 
 # Testing  
-pytest==8.0.0           # For writing unit tests  
+#pytest==8.0.0           # For writing unit tests  
