--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,8 @@ pyttsx3==2.98            # Offline TTS
 
 # GUI (Optional, if building a graphical interface)  
 #tkinter                   # Built-in for basic GUI  
-#PyQt6==6.5.1             # Alternative for advanced UI  
+PyQt5
+pyqt5-tools
 
 # Testing  
 #pytest==8.0.0           # For writing unit tests  
