--- a/config.json
+++ b/config.json
@@ -17,5 +17,8 @@
             "class": "MeteorologyService"
         }
     },
-    "apiKeys":{}
+    "apiKeys":{
+        "openweather": "be55fb2c6e62c76085b023e035c8348b",
+		"awanllm": "c7dac548-4d8f-4296-9c68-5afb9390e02e"
+	}
 }
