--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core Python dependencies  
 python-dotenv==1.1.0    # For managing environment variables  
-#requests==2.31.0        # For API calls (e.g., weather updates)  
+requests==2.32.3        # For API calls (e.g., weather updates)  
 
 # Speech Recognition  
 SpeechRecognition==3.14.2	# For converting speech to text  
