Using GUI. Added lauch app, not tested. Refactor

--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
         "fn": {
             "meteorology": {
                 "filePath": "fn.met.meteorology",
-                "class": "MeteorologyService"
+                "class": "MeteorologyFunctionality"
             }
         }
     },
