--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,10 +1,6 @@
 {
     "modules":{
         "base": {
-            "nlp": {
-                "filePath": "nlp.keyword_intents",
-                "class": "KeywordIntentRecognizer"
-            },
             "sr": {
                 "filePath": "sr.srm",
                 "class": "SpeechRecognitionModule"
@@ -23,6 +19,10 @@
             "meteorology": {
                 "filePath": "fn.met.meteorology",
                 "class": "MeteorologyFunctionality"
+            },
+            "os": {
+                "filePath": "fn.os.os",
+                "class": "OSFunctionality"
             }
         }
     },
